[gd_scene load_steps=2 format=3 uid="uid://bquo1uh5xtrqt"]

[ext_resource type="Script" path="res://Creation/main_menu.gd" id="1_7u4t2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7u4t2")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -163.5
offset_right = 138.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.505344, 0.505344, 0.505344, 1)

[node name="Button" type="Button" parent="TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -15.5
offset_right = 57.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Join server"

[node name="TextEdit" type="TextEdit" parent="TextureRect"]
custom_minimum_size = Vector2(110, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -59.5
offset_right = 55.0
offset_bottom = -24.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Nickname"

[node name="becomeHost" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(115, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = 27.5
offset_right = 48.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
text = "Host server"

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/becomeHost" to="." method="_become_host"]
